backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daniscarpa-backend
  namespace: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: daniscarpa-backend
  template:
    metadata:
      labels:
        app: daniscarpa-backend
    spec:
      containers:
      - name: daniscarpa-backend
        image: gcr.io/daniscarpa/backend:latest
        ports:
        - name: http
          containerPort: 5000
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.14
        command:
        - /cloud_sql_proxy
        - -instances=daniscarpa:europe-west6:daniscarpa-db=tcp:5432
        - -credential_file=/secrets/cloudsql/credentials.json
        - -verbose=false
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - while [ $(netstat -ltn | grep 21080 | wc -l) -eq 1 ]; do sleep 5; done
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true

      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: daniscarpa-backend
  namespace: backend
spec:
  type: NodePort
  ports:
  - name: backend
    port: 5000
    targetPort: http
  selector:
    app: daniscarpa-backend
