backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daniscarpa-backend
  namespace: backend
  labels:
    app: daniscarpa-backend
spec:
  type: NodePort
  ports:
  - name: backend
    port: 5000
  selector:
    app: daniscarpa-backend
